# dml-ide

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
inc/lib3mf/: version.txt
inc/lib3mf/Bindings/Cpp/: lib3mf_abi.hpp  lib3mf_implicit.hpp
inc/lib3mf/Bindings/CppDynamic/: lib3mf_dynamic.hpp  lib3mf_types.hpp
inc/lib3mf/Bindings/Go/: lib3mf.go  lib3mf_impl.go
inc/lib3mf/Bindings/NodeJS/: lib3mf_nodeaddon.cc  lib3mf_nodewrapper.cc
inc/lib3mf/Bindings/Python/: Lib3MF.py
lib/lib3mf_sdk_v2/Bindings/C/: lib3mf.h  lib3mf_types.h
lib/lib3mf_sdk_v2/Bindings/CppDynamic/: lib3mf_dynamic.h
lib/lib3mf_sdk_v2/Bindings/NodeJS/: lib3mf_dynamic.cc  lib3mf_dynamic.h  lib3mf_nodewrapper.h
lib/lib3mf_sdk_v2/Bindings/Pascal/: Unit_Lib3MF.pas
resources/shaders/: arrows.frag  arrows.geom  arrows.vert  bars.frag  bars.vert  depth.vert  depthCylinders.frag  depthCylinders.geom  depthCylinders.vert  lineCylinders.frag  lineCylinders.geom  passThrough.frag  passThrough.vert
scripts/: generateDMLFiles.py  install_dependencies.sh  install_dependencies_longhorn.sh  runSequence.sh
src/: .cproject  3MFutils.cpp  3MFutils.h  commandLine.cpp  commandLine.h  designViewer.cpp  designViewer.h  dmlTree.cpp  dmlTree.h  exportThread.cpp  exportThread.h  gUtils.cpp  gUtils.h  loader.cpp  loader.h  main.cpp  model.cu  model.h  modelviewer.cpp  modelviewer.h  oUtils.cpp  oUtils.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  polygon.cpp  polygon.h  polygonizer.cpp  polygonizer.h  properties.cpp  properties.h  resources.qrc  simViewer.cpp  simViewer.h  simulator.cpp  simulator.h  simulatorParallel.cu  simulatorParallel.h  utils.cpp  (+4 more)
src/gui/: dmlTree.cpp  exportdialog.cpp  exportdialog.h  exportdialog.ui  properties.cpp  window.cpp  window.h  window.ui
src/io/: commandLine.cpp  commandLine.h
src/opengl/: designViewer.cpp  designViewer.h  gUtils.h  simViewer.cpp
